# Hraun

./: README.md  aniso.py  cvol.c  glcae.py  gui.py  hraun.c  hraun.py  preprocessing.py  requirements.txt  snic.c  snic.py  unwrap.py  volman.py  zvol.py
src/: common.py  create_zarr.py  gui.py  hraun.py  numbamath.py  preprocessing.py  segment.py  snic.c  snic.py  tiffs2zarr.py  volman.py  zarr_downscale.py
src/c/: CMakeLists.txt  chunk.c  chunk.h  common.h  cvol.c  cvol.h  lava.c  lava.h  main.c  pyroclasic_flow.c  snic.c  snic.h  test.c  to_chunks.c
